Resolved CSS issues & created 404.html

--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse justify-content-center" id="navbarNavAltMarkup">
-          <div class="navbar-nav">
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav mx-auto">
+            <!-- Using mx-auto instead of justify-content-center -->
             <a class="nav-link mx-3 active" aria-current="page" href="index.html">Home</a>
             <a class="nav-link mx-3" href="plantexplorer.html">Plant Explorer</a>
             <a class="nav-link mx-3" href="about.html">About</a>
@@ -37,7 +38,7 @@
       <div class="container col-xxl-8 px-4 py-5 hero">
         <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
           <div class="col-10 col-sm-8 col-lg-6">
-            <img src="images/trillium_illustration.jpg" class="d-block mx-lg-auto img-fluid" alt="White Trillium - Ontario's Provincial Flower" width="700" height="500" loading="lazy">
+            <img class="hero-image d-block mx-lg-auto img-fluid" src="images/trillium_illustration.jpg" alt="White Trillium - Ontario's Provincial Flower" width="700" height="500" loading="lazy">
           </div>
           <div class="col-lg-6">
             <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Discover Ontario's Native Plant Species</h1>
@@ -76,7 +77,7 @@
               </div>
               <h3 class="card-title">Ecological Benefits</h3>
               <p class="card-text">Learn how native plants support local wildlife, conserve water, reduce maintenance, and improve soil health.</p>
-              <a href="benefits.html" class="btn btn-sm btn-outline-success mt-3">Discover Benefits</a>
+              <a href="404.html" class="btn btn-sm btn-outline-success mt-3">Discover Benefits</a>
             </div>
           </div>
         </div>
@@ -88,7 +89,7 @@
               </div>
               <h3 class="card-title">Gardening Resources</h3>
               <p class="card-text">Access guides, planting calendars, and care instructions to successfully incorporate native plants in your garden.</p>
-              <a href="resources.html" class="btn btn-sm btn-outline-success mt-3">View Resources</a>
+              <a href="404.html" class="btn btn-sm btn-outline-success mt-3">View Resources</a>
             </div>
           </div>
         </div>
