--- a/plantexplorer.html
+++ b/plantexplorer.html
@@ -32,7 +32,7 @@
         <div class="container col-xxl-8 px-4 py-3 hero">
             <div class="row align-items-center g-3 py-3">  <!-- Removed flex-lg-row-reverse -->
                 <div class="col-10 col-sm-8 col-lg-6">
-                    <img src="images/plant_explorer_logo.png" class="d-block mx-lg-auto img-fluid" alt="plant_explorer_logo" width="700" height="500" loading="lazy">
+                    <img src="images/plant_explorer_logo.png" class="plant-explorer-logo d-block mx-lg-auto img-fluid" alt="plant_explorer_logo" width="700" height="500" loading="lazy">
                 </div>
                 <div class="col-lg-6">
                     <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3" style="line-height: 1.5;">Plant Explorer</h1>
