--- a/contact.html
+++ b/contact.html
@@ -53,10 +53,7 @@
           <div class="card shadow-sm">
             <div class="card-body p-4">
               <h2 class="card-title mb-4">Send Us a Message</h2>
-              <form name="contact" method="POST" data-netlify="true" netlify-honeypot="bot-field" id="contactForm" novalidate>
-                <p class="hidden">
-                  <label>Don't fill this out if you're human: <input name="bot-field" /></label>
-                </p>
+              <form name="contact" method="POST" data-netlify="true" id="contactForm" novalidate>
                 <input type="hidden" name="form-name" value="contact" />
                 
                 <div class="mb-3">
