--- a/about.html
+++ b/about.html
@@ -109,6 +109,25 @@
       </div>
     </div>
     
+    <!-- Call to Action -->
+    <div class="container py-5">
+      <div class="row">
+        <div class="col-lg-8 mx-auto text-center">
+          <h2 class="mb-4">Join Our Community</h2>
+          <p class="lead mb-4">Sign up for our newsletter to receive plant identification tips, seasonal updates, and conservation news.</p>
+          <form class="row g-3 justify-content-center">
+            <div class="col-auto">
+              <label for="emailSignup" class="visually-hidden">Email</label>
+              <input type="email" class="form-control" id="emailSignup" placeholder="Your email address">
+            </div>
+            <div class="col-auto">
+              <button type="submit" class="btn btn-success mb-3">Subscribe</button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+
     <!-- Footer -->
     <footer class="text-white py-4" style="background-color:#00350b;">
       <div class="container">
